# ros-task3

./: CMakeLists.txt  README.md  config.yaml  package.xml
FoodClassification/: test.py  train.py
launch/: amcl_simulation.launch  combined.launch  rins_world.launch  task.launch  task1.launch
maps/: map.pgm  map_new.pgm  map_real.pgm  mapsim.pgm  normal_map.pgm
meshes/: rins_2022_task3_final.dae  rins_eval2.dae
rviz/: config.rviz
scripts/: breadcrumbs.py  cylinder_detection.py  detect_rings.py  extract_qr.py  face_localizer_dnn.py  face_localizer_haar.py  normal_vector_service.py
src/: map_goals.cpp
srv/: Normal_vector.srv  Normal_vectorResponse.srv
worlds/: rins.world
