<?xml version="1.0"?>
<package>
  <name>task3</name>
  <version>0.0.0</version>
  <description>The task3 package</description>

  <maintainer email="vp0583@student.uni-lj.si">vidp</maintainer>

  <license>BSD</license>
  <build_depend>message_generation</build_depend>
  <!-- <build_export_depend>message_generation</build_export_depend> -->

  <run_depend>message_runtime</run_depend>
  <!-- <run_export_depend>message_runtime</run_export_depend> -->

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sound_play</build_depend>
  <!-- <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> -->

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>sound_play</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

<export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
</export>
</package>
